Add basic animation

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <script defer type="text/javascript" src="semantic/dist/semantic.min.js"></script>
   <script defer type="text/javascript" src="js/main.js"></script>
   <script defer type="text/javascript" src="js/smoothScroll.js"></script>
+  <script defer type="text/javascript" src="js/scrollreveal.min.js"></script>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -38,6 +39,7 @@
     ga('send', 'pageview');
 
   </script>
+
   <link type="text/plain" rel="author" href="humans.txt" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
 </head>
@@ -51,6 +53,7 @@
       <a class="right item" href="contact.html"><span>contact</span></a>
     </div>
   </div> -->
+  <div id="cover"></div>
   <div class="firstSegment segment">
     <canvas id='background-grey-overlay'></canvas>
     <canvas id="background-wtc"></canvas>
@@ -60,6 +63,7 @@
       <h1>deploy.</h1>
     </div>
     <img class="logo" src="assets/cortlandtlabs_logo_text.png" />
+    <i class="chevron circle down icon"></i>
   </div>
   <div class="secondSegment ui stackable padded grid ">
     <div class="fourteen wide left aligned middle aligned centered column">
@@ -91,10 +95,10 @@
         </div>
       </div>
     </div>
-  </div>
+  </div><!-- 
   <div class="fourthSegment segment">
   </div>
-  <div class="fifthSegment ui padded grid">
+ -->  <div class="fifthSegment ui padded grid">
     <div class="fourteen wide middle aligned centered column">
       <h1>Pricing</h1>
       <div class="ui three stackable centered aligned middle aligned cards">
