Remove some unneccessary files

--- a/index.html
+++ b/index.html
@@ -67,10 +67,11 @@
   </div>
   <div class="secondSegment ui stackable padded grid ">
     <div class="fourteen wide left aligned middle aligned centered column">
-      <h1 >Are <span>YOU</span> looking to...</h1>
+      <h1>Are <span>YOU</span> looking to...</h1>
       <h2>Design a <span>Proof of Concept</span> to raise capital?</h2>
       <h2>Create a <span>Minimum Viable Product</span> to attract users?</h2>
       <h2>Build a <span>Production-level App</span> to change the world?</h2>
+      <h1 id="partner">Partner with us</h1>
     </div>
   </div>
   <div class="thirdSegment ui padded grid">
@@ -95,10 +96,10 @@
         </div>
       </div>
     </div>
-  </div><!-- 
-  <div class="fourthSegment segment">
   </div>
- -->  <div class="fifthSegment ui padded grid">
+<!--   <div class="fourthSegment segment">
+  </div> -->
+  <div class="fifthSegment ui padded grid">
     <div class="fourteen wide middle aligned centered column">
       <h1>Pricing</h1>
       <div class="ui three stackable centered aligned middle aligned cards">
