--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <img class="package-image" src="assets/prototype.png"/>
           </div>
           <h2>Prototype</h2>
-          <p>A proof of concept that you can interact</p>
+          <p>A proof of concept that you can interact with</p>
           <div class="ui horizontal divider"><i class="tag icon"></i></div>
           <h3 class="price">
             $ 5,000
