Switch to bd alias email address

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   </div>
   <div class="seventhSegment ui padded grid">
     <div class="fourteen wide middle aligned centered column">
-      <form class="ui form" action="https://formspree.io/cortlandtlabs@gmail.com" method="POST">
+      <form class="ui form" action="https://formspree.io/bd@cortlandtlabs.co" method="POST">
           <h1>
             Contact us
           </h1>
