Link start building to contact form for now

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           </h3>
         </div>
       </div>
-      <button class="ui big red button build">Start building</button>
+      <a class="ui big red button build" href="index.html#contact">Start building</a>
     </div>    
   </div>
   <div class="sixthSegment ui padded grid " id="values">
@@ -167,7 +167,7 @@
     </div>
   </div>
   <div class="seventhSegment ui padded grid">
-    <div class="fourteen wide middle aligned centered column">
+    <div class="fourteen wide middle aligned centered column" id="contact">
       <form class="ui form" action="https://formspree.io/bd@cortlandtlabs.co" method="POST">
           <h1>
             Contact us
