Remove index.html

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           </h3>
         </div>
       </div>
-      <a class="ui big red button build" href="index.html#contact">Start building</a>
+      <a class="ui big red button build" href="#contact">Start building</a>
     </div>    
   </div>
   <div class="sixthSegment ui padded grid " id="values">
