--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Cortlandt Labs</title>
-  
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Cortlandt Labs is a technology consulting agency started in NYC. We're here to architect, code, and deploy software with you that improves the experiences of you and your users; helping you figure out not only what people say they want, but what people really need." />
@@ -99,7 +99,7 @@
   </div> -->
   <div class="fifthSegment ui padded grid">
     <div class="fourteen wide middle aligned centered column">
-      <h1>Pricing</h1>
+      <h1>Options</h1>
       <div class="ui three stackable centered aligned middle aligned cards">
         <div class="card">
           <div>
@@ -109,7 +109,7 @@
           <p>A proof of concept that you can interact with</p>
           <div class="ui horizontal divider"><i class="tag icon"></i></div>
           <h3 class="price">
-            $ 5,000
+            $
           </h3>
         </div>
         <div class="card">
@@ -120,7 +120,7 @@
           <p>A solid app with core functionalities</p>
           <div class="ui horizontal divider"><i class="tag icon"></i></div>
           <h3 class="price">
-            $ 10,000
+            $$
           </h3>
         </div>
         <div class="card">
@@ -131,12 +131,12 @@
           <p>A user-heavy app aimed to impress</p>
           <div class="ui horizontal divider"><i class="tag icon"></i></div>
           <h3 class="price">
-            $ 20,000
+            $$$$
           </h3>
         </div>
       </div>
       <a class="ui big red button build" href="#contact">Start building</a>
-    </div>    
+    </div>
   </div>
   <div class="sixthSegment ui padded grid " id="values">
     <div class="fourteen wide middle aligned centered column">
